--- a/fszn/templates/contracts/acceptances.html
+++ b/fszn/templates/contracts/acceptances.html
@@ -20,7 +20,7 @@
     <a href="{{ url_for('contracts.manage_payments', contract_id=contract.id) }}">付款</a> |
     <a href="{{ url_for('contracts.manage_invoices', contract_id=contract.id) }}">开票</a> |
     <a href="{{ url_for('contracts.manage_refunds', contract_id=contract.id) }}">退款</a> |
-    <a href="{{ url_for('contracts.manage_feedbacks', contract_id=contract.id) }}">客户反馈</a>
+    <a href="{{ url_for('contracts.manage_feedbacks', contract_id=contract.id) }}">客户反馈</a> |
     <a href="{{ url_for('contracts.manage_files', contract_id=contract.id) }}">文件</a>
 </p>
 
