--- a/fszn/templates/org/new_person.html
+++ b/fszn/templates/org/new_person.html
@@ -24,7 +24,7 @@
         </select>
     </p>
     <p>
-        职位（例如：工程师 / 会计 / 采购员 / 销售员）：
+        职位（例如：工程师 / 采购 / 销售）：
         <input type="text" name="position">
     </p>
     <p>
