--- a/fszn/templates/contracts/procurements.html
+++ b/fszn/templates/contracts/procurements.html
@@ -17,10 +17,7 @@
     <a href="{{ url_for('contracts.manage_tasks', contract_id=contract.id) }}">任务/进度</a> |
     <a href="{{ url_for('contracts.manage_procurements', contract_id=contract.id) }}">采购清单</a> |
     <a href="{{ url_for('contracts.manage_acceptances', contract_id=contract.id) }}">验收</a> |
-    <a href="{{ url_for('contracts.manage_payments', contract_id=contract.id) }}">付款</a> |
-    <a href="{{ url_for('contracts.manage_invoices', contract_id=contract.id) }}">开票</a> |
-    <a href="{{ url_for('contracts.manage_refunds', contract_id=contract.id) }}">退款</a> |
-    <a href="{{ url_for('contracts.manage_feedbacks', contract_id=contract.id) }}">客户反馈</a>
+    <a href="{{ url_for('contracts.manage_feedbacks', contract_id=contract.id) }}">客户反馈</a> |
     <a href="{{ url_for('contracts.manage_files', contract_id=contract.id) }}">文件</a>
 
 </p>
