--- a/fszn/templates/auth/register.html
+++ b/fszn/templates/auth/register.html
@@ -13,6 +13,12 @@
     </p>
     <p>
         <label>
+            真实姓名：
+            <input type="text" name="real_name">
+        </label>
+    </p>
+    <p>
+        <label>
             邮箱：
             <input type="email" name="email">
         </label>
