--- a/fszn/templates/contracts/list.html
+++ b/fszn/templates/contracts/list.html
@@ -170,7 +170,7 @@
             <th class="col-tasks">后续任务</th>
             <th class="col-mech">机械设计</th>
             <th class="col-elec">电气设计</th>
-            <th class="col-prog">程序设计</th>
+            <th class="col-prog">软件设计</th>
             <th class="col-asm">装配调试</th>
             <th class="col-feedback">客户反馈/备注</th>
             <th class="col-ops">操作</th>
